--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "bcrypt": "^5.1.0",
+    "crypto-js": "^4.1.1",
     "nestjs-telegraf": "^2.6.3",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
